src/themes/darkmatter.css
html[data-theme="darkmatter"] {
    --background: oklch(0.1797 0.0043 308.1928);
    --foreground: oklch(0.8109 0 0);
    --card: oklch(0.1822 0 0);
    --card-foreground: oklch(0.8109 0 0);
    --popover: oklch(0.1797 0.0043 308.1928);
    --popover-foreground: oklch(0.8109 0 0);
    --primary: oklch(0.7214 0.1337 49.9802);
    --primary-foreground: oklch(0.1797 0.0043 308.1928);
    --secondary: oklch(0.594 0.0443 196.0233);
    --secondary-foreground: oklch(0.1797 0.0043 308.1928);
    --muted: oklch(0.252 0 0);
    --muted-foreground: oklch(0.6268 0 0);
    --accent: oklch(0.3211 0 0);
    --accent-foreground: oklch(0.8109 0 0);
    --destructive: oklch(0.6591 0.153 22.1703);
    --destructive-foreground: oklch(1 0 0);
    --border: oklch(0.252 0 0);
    --input: oklch(0.252 0 0);
    --ring: oklch(0.7214 0.1337 49.9802);
    --chart-1: oklch(0.594 0.0443 196.0233);
    --chart-2: oklch(0.7214 0.1337 49.9802);
    --chart-3: oklch(0.8721 0.0864 68.5474);
    --chart-4: oklch(0.6268 0 0);
    --chart-5: oklch(0.683 0 0);
    --sidebar: oklch(0.1822 0 0);
    --sidebar-foreground: oklch(0.8109 0 0);
    --sidebar-primary: oklch(0.7214 0.1337 49.9802);
    --sidebar-primary-foreground: oklch(0.1797 0.0043 308.1928);
    --sidebar-accent: oklch(0.3211 0 0);
    --sidebar-accent-foreground: oklch(0.8109 0 0);
    --sidebar-border: oklch(0.252 0 0);
    --sidebar-ring: oklch(0.7214 0.1337 49.9802);
    --radius: 0.75rem;
    --shadow-x: 0px;
    --shadow-y: 1px;
    --shadow-blur: 4px;
    --shadow-spread: 0px;
    --shadow-opacity: 0.05;
    --shadow-color: #000000;
    --shadow-2xs: 0px 1px 4px 0px hsl(0 0% 0% / 0.03);
    --shadow-xs: 0px 1px 4px 0px hsl(0 0% 0% / 0.03);
    --shadow-sm: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 1px 2px -1px hsl(0 0% 0% / 0.05);
    --shadow: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 1px 2px -1px hsl(0 0% 0% / 0.05);
    --shadow-md: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 2px 4px -1px hsl(0 0% 0% / 0.05);
    --shadow-lg: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 4px 6px -1px hsl(0 0% 0% / 0.05);
    --shadow-xl: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 8px 10px -1px hsl(0 0% 0% / 0.05);
    --shadow-2xl: 0px 1px 4px 0px hsl(0 0% 0% / 0.13);
    --tracking-normal: 0rem;
    --spacing: 0.25rem;

    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) + 4px);

    --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
    --tracking-tight: calc(var(--tracking-normal) - 0.025em);
    --tracking-normal: var(--tracking-normal);
    --tracking-wide: calc(var(--tracking-normal) + 0.025em);
    --tracking-wider: calc(var(--tracking-normal) + 0.05em);
    --tracking-widest: calc(var(--tracking-normal) + 0.1em);
}

